docker-step5-app-to-k8s/k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: front-end
  template:
    metadata:
      labels:
        component: front-end
    spec:
      containers:
      - name: client
        image: jaychangha/template-client
        ports:
        - containerPort: 8080
