docker-step5-app-to-k8s/k8s/client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: front-end
  ports:
  - port: 3000
    targetPort: 8080
