docker-step5-app-to-k8s/k8s/server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  # 在 GKE 中 ingress-controller 只能連向為 NodePort 或 LoadBalance 的 Service 
  # type: ClusterIP
  type: NodePort
  selector:
    component: api
  ports:
  - port: 3001
    targetPort: 5000
